--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,11 @@ main {
   min-height: 80vh;
 }
 
+.section-styling {
+  padding: 1em;
+  margin: 1em;
+}
+
 .large-s-logo {
   width: 6%;
 }
@@ -625,9 +630,59 @@ main {
   margin-top: auto;
 }
 
+.story h1 {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 700;
+  font-size: 3em;
+  letter-spacing: 0px;
+}
+
 @media (max-width: 1000px) {
   .hero-alternative {
+    background-color: #f4eff0;
+    flex-direction: column-reverse;
+    display: flex;
+    background-position: center center;
+    background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
+  }
+  .hero-alternative .hero-alternative-intro {
+    width: 100%;
+    margin-top: 1em;
+    text-align: left;
+    padding: 1.5em;
+    display: flex;
     flex-direction: column;
+    justify-content: center;
+  }
+  .hero-alternative .hero-alternative-intro button {
+    width: 50%;
+  }
+  .hero-alternative .hero-alternative-intro h1 {
+    font-size: 4em;
+    margin-bottom: 0.01em;
+  }
+  .hero-alternative .hero-alternative-intro p {
+    color: rgb(113, 111, 111);
+    font-size: 1.5em;
+  }
+  .hero-alternative .hero-alternative-intro .shop-button {
+    width: 45%;
+  }
+  .hero-alternative .hero-alternative-intro .contact-button {
+    border: 1px solid #efbab2;
+    width: 45%;
+  }
+  .hero-alternative .hero-alternative-intro .contact-button:hover {
+    border: 1px solid #e2aba2;
+    background-color: #e2aba2;
+    color: black;
+  }
+  .hero-alternative .products-gif {
+    width: 100%;
+    justify-content: flex-end;
+    margin-top: auto;
   }
   .carousel-caption h2 {
     padding: 10px;
@@ -678,94 +733,15 @@ main {
   .prf-tit {
     margin-top: 1em;
   }
-}
-@media (max-width: 600px) {
-  .carousel-caption {
-    font-size: 2px;
-  }
-}
-.team-head {
-  display: flex;
-  flex-direction: row;
-  background-color: #f5f5f5;
-  text-align: left;
-  margin: 1em 0;
-  padding: 2em;
-}
-.team-head .team-left {
-  width: 40%;
-  align-items: center;
-  justify-content: center;
-}
-.team-head .team-left img {
-  width: 100%;
-}
-.team-head .team-right {
-  width: 60%;
-  padding-left: 1.5em;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.team-head .team-right .about-buttons {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
-  transition: 1s ease;
-}
-.team-head .team-right .about-buttons button {
-  margin-top: 1em;
-  padding: 0.5em 1em 0.5em 1em;
-  background-color: rgb(29, 78, 216);
-  color: white;
-  font-size: 1.2em;
-  width: 30%;
-}
-.team-head .team-right .about-buttons button:hover {
-  background-color: rgb(34, 87, 233);
-}
-
-@media (max-width: 1000px) {
   .top-products {
     flex-direction: column;
   }
   .top-card {
     margin-top: 1em;
   }
-  .team-head {
-    flex-direction: column;
-  }
-  .team-head .team-left {
-    width: 100%;
-  }
-  .team-head .team-left img {
-    width: 100%;
-  }
-  .team-head .team-right {
-    width: 100%;
-    padding-left: 0;
-    margin-top: 1em;
-    display: flex;
-    flex-direction: column;
-    font-size: 0.95em;
-  }
-  .team-head .team-right .about-buttons {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 100%;
-    transition: 1s ease;
-  }
-  .team-head .team-right .about-buttons button {
-    margin-top: 1em;
-    padding: 0.5em 1em 0.5em 1em;
-    background-color: rgb(29, 78, 216);
-    color: white;
-    font-size: 1.2em;
-    width: 100%;
-  }
-  .team-head .team-right .about-buttons button:hover {
-    background-color: rgb(34, 87, 233);
+}
+@media (max-width: 600px) {
+  .carousel-caption {
+    font-size: 2px;
   }
 }/*# sourceMappingURL=index.css.map */
