--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Pacifico&display=swap");
+
 html {
   scroll-behavior: smooth;
 }
@@ -16,11 +18,36 @@ main {
   min-height: 80vh;
 }
 
+.section-title {
+  font-family: "Pacifico", cursive;
+  font-weight: 700;
+  font-size: 3em;
+  margin-bottom: 0.5em;
+  letter-spacing: 0px;
+}
+
 .section-styling {
   padding: 1em;
   margin: 1em;
   // background-color: #f7f7f7;
   // border-radius: 1em;
+}
+
+.offer-cards-container {
+  .card1 {
+    background-color: #f5e2e4;
+    padding: 1em;
+    margin-right: 1em;
+  }
+  .card2 {
+    background-color: #f5e2e4;
+    padding: 1em;
+  }
+  .card3 {
+    background-color: #f5e2e4;
+    padding: 1em;
+    margin-left: 1em;
+  }
 }
 
 .large-s-logo {
@@ -262,6 +289,49 @@ main {
     span {
       padding: 0.15em 1em 0.15em 1em;
       color: black;
+    }
+  }
+}
+
+.main-container {
+  .row1 {
+    display: flex;
+    .cake-image {
+      width: 50%;
+    }
+    .cta1 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 2em;
+      background-color: #f5f3e7;
+      width: 50%;
+      h1 {
+        font-family: "Pacifico", cursive;
+        font-weight: 400;
+        font-size: 5em;
+      }
+    }
+  }
+  .row2 {
+    display: flex;
+    .cta2 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background-color: #f5e2e4;
+      width: 50%;
+      padding: 2em;
+      h1 {
+        font-family: "Pacifico", cursive;
+        font-weight: 200;
+        font-size: 5em;
+      }
+    }
+    .cups-image {
+      width: 50%;
     }
   }
 }
@@ -692,7 +762,7 @@ main {
 
 .story {
   h1 {
-    font-family: "Bebas Neue", sans-serif;
+    font-family: "Pacifico", cursive;
     font-weight: 700;
     font-size: 3em;
     letter-spacing: 0px;
