--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -296,8 +296,18 @@ main {
 .main-container {
   .row1 {
     display: flex;
+    // Relative positioning for the cake image
+
     .cake-image {
+      position: relative;
       width: 50%;
+      svg {
+        fill: #f5e2e4;
+        position: absolute;
+        bottom: -1px;
+        right: 0;
+        width: 100%;
+      }
     }
     .cta1 {
       display: flex;
@@ -332,6 +342,12 @@ main {
     }
     .cups-image {
       width: 50%;
+      position: relative;
+      svg {
+        fill: #f5f3e7;
+        position: absolute;
+        top: 0;
+      }
     }
   }
 }
@@ -769,7 +785,70 @@ main {
   }
 }
 
+@media (max-width: 600px) {
+  .carousel-caption {
+    font-size: 2px;
+  }
+}
+
 @media (max-width: 1000px) {
+  .main-container {
+    .row1 {
+      display: flex;
+      flex-direction: column-reverse;
+      .cake-image {
+        width: 100%;
+        svg {
+          fill: #f5f3e7;
+          top: -2px;
+          rotate: 180deg;
+        }
+      }
+      .cta1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 2em;
+        background-color: #f5f3e7;
+        width: 100%;
+        h1 {
+          font-family: "Pacifico", cursive;
+          font-weight: 400;
+          font-size: 5em;
+        }
+      }
+    }
+    .row2 {
+      display: flex;
+      flex-direction: column-reverse;
+      .cta2 {
+        display: flex;
+
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #f5e2e4;
+        width: 100%;
+        padding: 2em;
+        h1 {
+          font-family: "Pacifico", cursive;
+          font-weight: 200;
+          font-size: 5em;
+        }
+      }
+      .cups-image {
+        width: 100%;
+        svg {
+          fill: #f5e2e4;
+          bottom: -2px;
+          rotate: 180deg;
+          top: auto;
+        }
+      }
+    }
+  }
+
   .hero-alternative {
     background-color: #f4eff0;
     flex-direction: column-reverse;
@@ -876,11 +955,5 @@ main {
   }
   .top-card {
     margin-top: 1em;
-  }
-}
-
-@media (max-width: 600px) {
-  .carousel-caption {
-    font-size: 2px;
   }
 }
