--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -841,7 +841,7 @@ main {
         width: 100%;
         svg {
           fill: #f5e2e4;
-          bottom: -2px;
+          bottom: -2epx;
           rotate: 180deg;
           top: auto;
         }
