--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -33,22 +33,7 @@ main {
   // border-radius: 1em;
 }
 
-.offer-cards-container {
-  .card1 {
-    background-color: #f5e2e4;
-    padding: 1em;
-    margin-right: 1em;
-  }
-  .card2 {
-    background-color: #f5e2e4;
-    padding: 1em;
-  }
-  .card3 {
-    background-color: #f5e2e4;
-    padding: 1em;
-    margin-left: 1em;
-  }
-}
+
 
 .large-s-logo {
   width: 6%;
@@ -641,6 +626,26 @@ main {
 }
 
 @media (max-width: 1000px) {
+
+  .offer-cards-container {
+    .card1 {
+      background-color: #f5e2e4;
+      padding: 1em;
+      margin-right: 0;
+      margin-bottom: 1em;
+    }
+    .card2 {
+      background-color: #f5e2e4;
+      padding: 1em;
+    }
+    .card3 {
+      background-color: #f5e2e4;
+      padding: 1em;
+      margin-left: 0;
+      margin-top: 1em;
+    }
+  }
+
   .carousel-control-prev span {
     background-color: rgba(0, 0, 0, 0.562);
     padding: 12px;
@@ -802,6 +807,7 @@ main {
           fill: #f5f3e7;
           top: -2px;
           rotate: 180deg;
+          width: 100%;
         }
       }
       .cta1 {
@@ -843,7 +849,8 @@ main {
           fill: #f5e2e4;
           bottom: -2epx;
           rotate: 180deg;
-          top: auto;
+          top: 60%;
+          width: 100%;
         }
       }
     }
